<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/left_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start" >

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/desc_img_profile"
        android:src="@android:drawable/alert_dark_frame" />

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignBottom="@+id/imageViewProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/desc_img_avatar"
        android:src="@android:drawable/alert_light_frame" />

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageViewProfile"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world" />

</RelativeLayout>
