<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageButton
        android:id="@+id/imagebutton_edit"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple"
        android:src="@mipmap/ic_create_white"
        android:contentDescription="@string/button_add" />

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/desc_img_profile"
        android:src="@android:drawable/alert_dark_frame" />

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/vazio"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/desc_img_avatar"
        android:src="@android:drawable/alert_light_frame" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/vazio" />

</RelativeLayout>